--- a/ui/views/proofs.ejs
+++ b/ui/views/proofs.ejs
@@ -1,53 +1,34 @@
 <div id="proofs" class="tab" style="display:none;">
-    <div class="card">
-
-        <h5 class="card-header info-color white-text text-center py-4">
-            <strong>PRUEBAS</strong>
-        </h5>
-
-        <!--Card content-->
-        <div class="card-body px-lg-5">
-
-            <!-- Form -->
-            <form class="text-center" method="POST" action="/api/proofs/send_request" style="color: #757575;">
-
-                <!-- Name -->
-                <div class="md-form mt-3">
-                    <label for="materialSubscriptionFormPasswords">Conexión</label>
-                    <select class="form-control form-control-lg" name="their_relationship_did" required>
-                        <%for(let relationship of relationships) {%>
-                        <option value="<%=relationship.their_did%>"><%=relationship.metadata.name%></option>
-                        <%}%>
-                    </select>
-
-                </div>
-
-                <!-- E-mai -->
-                <div class="md-form">
-                    <label>Selecciona una solicitud de prueba:</label>
-                    <select id="currentProofRequest" onchange="show(this.value)" class="form-control form-control-lg" name="proof_request_id" required>
-                        <%for(let pr of Object.keys(proofRequests)) {%>
-                        <option value="<%=pr%>"><%=pr%></option>
-                        <%}%>/#proofs
-                        <option value="proofRequestOther">Otra, pegue otra solicitud de prueba --></option>
-                    </select>
-                </div>
-
-                <!-- Sign in button -->
-                <div>
-                    <%for(let pr of Object.keys(proofRequests)) {%>
-                        <div id="<%=proofRequests[pr].name%>" class="proofRequestsClass" style="width:100%; display:none;">
-                            <textarea style="width:100%;" rows="20" readonly><%=proofRequests[pr].string%></textarea>
-                        </div>
+    <form method="POST" action="/api/proofs/send_request">
+        <div class="w3-half">
+            <div class="w3-container w3-card w3-padding w3-margin">
+                <label>Relationship: </label>
+                <select class="w3-select" name="their_relationship_did" required>
+                    <%for(let relationship of relationships) {%>
+                    <option value="<%=relationship.their_did%>"><%=relationship.metadata.name%></option>
                     <%}%>
-                    <div class="form-group  proofRequestsClass" id="proofRequestOther" style="width:100%; display:none;">
-                        <label for="comment">Solicitud de prueba</label>
-                        <textarea class="form-control"  rows="20" id="comment" ></textarea>
-                    </div>
-                </div>
+                </select>
+                <br><br>
+                <label>Select a Proof Request:</label>
+                <select id="currentProofRequest" onchange="showDiv(this.value, 'proofRequestsClass')" class="w3-select" name="proof_request_id" required>
+                    <%for(let pr of Object.keys(proofRequests)) {%>
+                    <option value="<%=pr%>"><%=pr%></option>
+                    <%}%>
+                    <option value="proofRequestOther">Other (Paste Proof Request Here) --></option>
+                </select>
+                <br><br>
                 <input class="w3-btn w3-white w3-border" type="submit">
-            </form>
-            <!-- Form -->
+            </div>
         </div>
-    </div>
+        <div class="w3-half">
+            <%for(let pr of Object.keys(proofRequests)) {%>
+            <div id="<%=proofRequests[pr].name%>" class="proofRequestsClass" style="width:100%;display:none;">
+                <textarea style="width:100%;" rows="20" readonly><%=proofRequests[pr].string%></textarea>
+            </div>
+            <%}%>
+            <div id="proofRequestOther" class="proofRequestsClass" style="width:100%;display:none;">
+                <textarea name="manual_entry" style="width:100%;" rows="20"></textarea>
+            </div>
+        </div>
+    </form>
 </div>
