--- a/ui/views/proofs.ejs
+++ b/ui/views/proofs.ejs
@@ -26,7 +26,7 @@
                 <textarea style="width:100%;" rows="20" readonly><%=proofRequests[pr].string%></textarea>
             </div>
             <%}%>
-            <div id="proofRequestOther" class="proofRequestsClass" style="width:100%;display:none;">
+            <div id="proofRequestOther" class="proofRequestsClass" style="width:100%;">
                 <textarea name="manual_entry" style="width:100%;" rows="20"></textarea>
             </div>
         </div>
