--- a/ui/views/credentials.ejs
+++ b/ui/views/credentials.ejs
@@ -9,9 +9,9 @@
             <%for(let credential of credentials) {%>
                 <div class="carousel-item">
                     <svg class="d-block w-25 mx-auto"data-jdenticon-value="<%=credential.cred_def_id%>"></svg>
-                    <h3><%=credential.schema_id%></h3>
+                    <h4><%=credential.schema_id.split(':')[2]%> <%=credential.schema_id.split(':')[3]%></h4>
                     <%for(let attr of Object.keys(credential.attrs).sort()) {%>
-                    <p><%=attr%>: <%=credential.attrs[attr]%></p>
+                    <p style="text-align: left"><%=attr%>: <%=credential.attrs[attr]%></p>
                     <%}%>
                 </div>
         <%}%>
