--- a/ui/views/credentials.ejs
+++ b/ui/views/credentials.ejs
@@ -9,12 +9,12 @@
             <%for(let credential of credentials) {%>
                 <div class="carousel-item">
                     <svg class="d-block w-25 mx-auto"data-jdenticon-value="<%=credential.cred_def_id%>"></svg>
-                    <h4><%=credential.schema_id.split(':')[2]%> <%=credential.schema_id.split(':')[3]%></h4>
+                    <h3><%=credential.schema_id%></h3>
                     <%for(let attr of Object.keys(credential.attrs).sort()) {%>
-                    <p style="text-align: left"><%=attr%>: <%=credential.attrs[attr]%></p>
+                        <p><%=attr%>: <%=credential.attrs[attr]%></p>
                     <%}%>
                 </div>
-        <%}%>
+            <%}%>
         </div>
         <a class="left carousel-control" href="#carouselExampleControls1" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left"></span>
