--- a/ui/views/relationships.ejs
+++ b/ui/views/relationships.ejs
@@ -18,17 +18,20 @@
                     </fieldset>
                     <p>Their Public Did: <%=relationship.metadata.theirEndpointDid%></p>
                     <p><b>Proofs:</b></p>
-                    <%if(relationship.metadata.proof) {%>
-                        <%for(let proof of relationship.metadata.proof) {%>
+                    <%if(relationship.metadata.proofs) {%>
+                        <%for(let proof of relationship.metadata.proofs) {%>
                             <div class="w3-bar w3-card">
                                 <div class="w3-bar-item">
-                                    <p style="text-decoration: underline;"><%=proof.name%></p>
+                                    <p style="text-decoration: underline;"><%=proof.request.name%></p>
+                                    <%for(let attr of Object.keys(proof.request.requested_attributes)) {%>
+                                    <p><%=proof.request.requested_attributes[attr].name%>: <%=proof.requested_proof.revealed_attrs[attr].raw%></p>
+                                    <%}%>
                                 </div>
                                 <div class="w3-bar-item">
                                     <button class="w3-btn w3-white w3-border" style="display:block;margin: 20px 20px;height: 100px;width:100px;" type="submit" onclick="validateProof(this.parentNode, <%=JSON.stringify(proof)%>)">Validate</button>
                                 </div>
                             </div>
-                            <br><br>
+                        <br><br>
                         <%}%>
                     <%}%>
                 </div>
