cambios dropdown emitir

--- a/ui/views/conexiones.ejs
+++ b/ui/views/conexiones.ejs
@@ -1,4 +1,4 @@
-<div id="relationships" class="tab" style="display:none;" >
+<div id="conexiones" class="tab" style="display:none;" >
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
