--- a/ui/views/credenciales.ejs
+++ b/ui/views/credenciales.ejs
@@ -1,5 +1,5 @@
 
-<div id="credentials" class="tab" style="display:none;">
+<div id="credenciales" class="tab" style="display:none;">
     <div id="carouselExampleControls1" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
