--- a/ui/views/index3.ejs
+++ b/ui/views/index3.ejs
@@ -121,11 +121,11 @@
 </div>
 
 <div class="w3-row-padding w3-center w3-margin-top">
-  <% include credentials.ejs %>
-  <% include proofs.ejs %>
-  <% include issuing.ejs %>
-  <% include relationships.ejs %>
-  <% include messages.ejs %>
+  <% include credenciales.ejs %>
+  <% include justificante.ejs %>
+  <% include emitir.ejs %>
+  <% include conexiones.ejs %>
+  <% include mensajes.ejs %>
 </div>
 <footer>
   <p>Mi did es: <%=endpointDid%></p>
