--- a/ui/views/emitir.ejs
+++ b/ui/views/emitir.ejs
@@ -1,4 +1,4 @@
-<div id="issuing" class="tab" style="display:none;">
+<div id="emitir" class="tab" style="display:none;">
     <div class="w3-container w3-card w3-padding w3-margin" style="float: left;width: 31%">
         <h3>Crea un esquema </h3>
         <form method="POST" action="/api/issuer/create_schema">
