--- a/ui/views/index.ejs
+++ b/ui/views/index.ejs
@@ -63,19 +63,30 @@
                 <a class="nav-link" href="/logout">Logout <span class="sr-only" >(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#relationships" onclick="showTab('relationships')">Conexiones</a>
+                <a class="nav-link" href="#conexiones" onclick="showTab('conexiones')">Conexiones</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#credentials" onclick="showTab('credentials')">Credenciales</a>
+                <a class="nav-link" href="#credenciales" onclick="showTab('credenciales')">Credenciales</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#proofs" onclick="showTab('proofs')">Proofs</a>
+                <a class="nav-link" href="#justificante" onclick="showTab('justificante')">Justificantes</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Dropdown
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#crearEsquema" onclick="showTab('crearEsquema')">Crear Esquema</a>
+                    <a class="dropdown-item" href="#crearCredencial" onclick="showTab('crearCredncial')">Crear Credencial</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item"  href="#emitirCredencial" onclick="showTab('emitirCredencial')">Emitir Credencial</a>
+                </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#issuing" onclick="showTab('issuing')">Issuing</a>
+                <a class="nav-link" href="#emitir" onclick="showTab('emitir')">Emitir Credenciales</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#messages" onclick="showTab('messages')">Messages</a>
+                <a class="nav-link" href="#mensajes" onclick="showTab('mensajes')">Mensajes</a>
             </li>
         </ul>
     </div>
@@ -86,11 +97,13 @@
     <!-- Modal de Nuevo Mensaje-->
    <%include modalMessage.ejs%>
     <div class="w3-row-padding w3-center w3-margin-top">
-        <% include credentials.ejs %>
-        <% include proofs.ejs %>
-        <% include issuing.ejs %>
-        <% include relationships.ejs %>
-        <% include messages.ejs %>
+        <% include credenciales.ejs %>
+        <% include justificante.ejs %>
+        <% include emitirCredencial.ejs %>
+        <% include crearCredencial.ejs %>
+        <% include crearEsquema.ejs %>
+        <% include conexiones.ejs %>
+        <% include mensajes.ejs %>
     </div>
 </div>
 <footer class="page-footer font-small blue">
