--- a/ui/views/justificante.ejs
+++ b/ui/views/justificante.ejs
@@ -1,4 +1,4 @@
-<div id="proofs" class="tab" style="display:none;">
+<div id="justificante" class="tab" style="display:none;">
     <form method="POST" action="/api/proofs/send_request">
         <div class="w3-half">
             <div class="w3-container w3-card w3-padding w3-margin">
@@ -26,7 +26,7 @@
                 <textarea style="width:100%;" rows="20" readonly><%=proofRequests[pr].string%></textarea>
             </div>
             <%}%>
-            <div id="proofRequestOther" class="proofRequestsClass" style="width:100%;">
+            <div id="proofRequestOther" class="proofRequestsClass" style="width:100%;display:none;">
                 <textarea name="manual_entry" style="width:100%;" rows="20"></textarea>
             </div>
         </div>
