--- a/ui/views/index.ejs
+++ b/ui/views/index.ejs
@@ -37,7 +37,7 @@
         }
         body {
             font-family: Tomorrow;
-            font-size: 15px;
+            font-size: 25px;
         }
         #buttonAbajo {
             margin-top: 10em;
@@ -96,6 +96,7 @@
     <div class="w3-row-padding w3-center w3-margin-top">
         <% include credenciales.ejs %>
         <% include justificante.ejs %>
+        <% include emitirCredencial.ejs %>
         <% include crearCredencial.ejs %>
         <% include crearEsquema.ejs %>
         <% include conexiones.ejs %>
