--- a/ui/views/index.ejs
+++ b/ui/views/index.ejs
@@ -37,7 +37,6 @@
         }
         body {
             font-family: Tomorrow;
-            font-size: 25px;
         }
         #buttonAbajo {
             margin-top: 10em;
@@ -49,6 +48,7 @@
             height:30px;
             width:100%;
         }
+        .w3-bar { background-color: <%=theme%> !important }
     </style>
 </head>
 <body>
