--- a/ui/views/index.ejs
+++ b/ui/views/index.ejs
@@ -23,20 +23,10 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" integrity="sha384-v8BU367qNbs/aIZIxuivaU55N5GPF89WBerHoGA4QTcbUjYiLQtKdrfXnqAcXyTv" crossorigin="anonymous">
     <style>
         /* latin */
-        @font-face {
-            font-family: 'Tomorrow';
-            font-style: normal;
-            font-weight: 400;
-            font-display: swap;
-            src: local('Tomorrow Regular'), local('Tomorrow-Regular'), url(https://fonts.gstatic.com/s/tomorrow/v2/WBLmrETNbFtZCeGqgRXSe2A.woff2) format('woff2');
-            unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-        }
+
         #credentials {
             border-width: 5px;
             border-color: blue;
-        }
-        body {
-            font-family: Tomorrow;
         }
         #buttonAbajo {
             margin-top: 10em;
@@ -48,7 +38,7 @@
             height:30px;
             width:100%;
         }
-        .w3-bar { background-color: <%=theme%> !important }
+        .navbar { background-color: <%=theme%> !important }
     </style>
 </head>
 <body>
