cambio letra  y añadir tematica

--- a/ui/views/crearEsquema.ejs
+++ b/ui/views/crearEsquema.ejs
@@ -1,5 +1,5 @@
 <div id="crearEsquema" class="tab" style="display:none;">
-    <div class="w3-container w3-card w3-padding w3-margin" style="float: left;width: 31%">
+    <div class="w3-container w3-card w3-padding w3-margin">
         <h3>Crea un esquema </h3>
         <form method="POST" action="/api/issuer/create_schema">
             <label>Nombre del Esquema</label>
