--- a/ui/views/index.ejs
+++ b/ui/views/index.ejs
@@ -38,7 +38,8 @@
             height:30px;
             width:100%;
         }
-        .navbar { background-color: <%=theme%> !important }
+        .navbar { background-color: <%=theme%> !important;
+                    font-size: 20px;}
     </style>
 </head>
 <body>
