--- a/ui/views/conexiones.ejs
+++ b/ui/views/conexiones.ejs
@@ -7,7 +7,7 @@
             </div>
             <%for(let relationship of relationships) {%>
                 <div class="carousel-item">
-                    <svg class="d-block w-25 mx-auto"data-jdenticon-value="<%=relationship.their_did%>"></svg>
+                    <img src="https://avatars.dicebear.com/v2/human/:<%=relationship.their_did%>.svg">
                     <%if(relationship.metadata.name) {%>
                         <h3><%=relationship.metadata.name%></h3>
                     <%}%>
