--- a/ui/views/conexiones.ejs
+++ b/ui/views/conexiones.ejs
@@ -7,7 +7,7 @@
             </div>
             <%for(let relationship of relationships) {%>
                 <div class="carousel-item">
-                    <img src="https://avatars.dicebear.com/v2/human/:<%=relationship.their_did%>.svg">
+                    <img src="https://avatars.dicebear.com/v2/identicon/:<%=relationship.their_did%>.svg" style="width: 200px; height: 200px;">
                     <%if(relationship.metadata.name) {%>
                         <h3><%=relationship.metadata.name%></h3>
                     <%}%>
