--- a/ui/views/credenciales.ejs
+++ b/ui/views/credenciales.ejs
@@ -8,7 +8,7 @@
             </div>
             <%for(let credential of credentials) {%>
                 <div class="carousel-item">
-                    <svg class="d-block w-25 mx-auto"data-jdenticon-value="<%=credential.cred_def_id%>"></svg>
+                    <img class="d-block w-25 mx-auto" src="https://avatars.dicebear.com/v2/identicon/:<%=credential.cred_def_id%>.svg">
                     <h3><%=credential.schema_id%></h3>
                     <%for(let attr of Object.keys(credential.attrs).sort()) {%>
                         <p><%=attr%>: <%=credential.attrs[attr]%></p>
