cambio iconos conexiones

--- a/ui/views/index.ejs
+++ b/ui/views/index.ejs
@@ -39,8 +39,9 @@
             height:30px;
             width:100%;
         }
-        .navbar { background-color: <%=theme%> !important;
-                    font-size: 20px;}
+
+        .navbar { background-color: <%=theme%> !important;}
+        body {font-size: 18px}
     </style>
 </head>
 <body>
