--- a/ui/views/index.ejs
+++ b/ui/views/index.ejs
@@ -164,7 +164,7 @@
             console.log(xhttp);
             if(xhttp.status === 200) {
                 console.log("Validation succeeded");
-                div.innerHTML = '<i class="fa fa-check-circle-o" style="color:green;font-size:100px; aria-hidden="true"></i>'
+                div.innerHTML = '<i class="fa fa-check-circle-o" style="color:green;font-size:100px;"></i>'
             } else {
                 div.innerHTML = '<i class="far fa-times-circle" style="color:red;font-size:100px;"></i>'
                 console.log("Validation failed");
