--- a/ui/views/mensajes.ejs
+++ b/ui/views/mensajes.ejs
@@ -6,20 +6,20 @@
             <div class="w3-card w3-container" >
                 <button class="w3-btn w3-white w3-right" onclick="request('/api/messages/delete', 'POST', JSON.stringify({messageId: '<%=message.id%>'}))"><i class="fa fa-close"></i></button>
                 <%if(message.relationshipName) {%>
-                    <p><b>From: <%=message.relationshipName%></b></p>
+                    <p><b>De: <%=message.relationshipName%></b></p>
                 <%}%>
-                <p>Type: <%=message.message.type%></p>
-                <p>Received: <%=message.timestamp%></p>
+                <p>Tipo: <%=message.message.type%></p>
+                <p>Recibido: <%=message.timestamp%></p>
                 <div>
                     <%if (message.message.type === messageTypes.connections.REQUEST) {%>
                         <form>
                             <input type="hidden" id="connection_message_id" value="<%=message.id%>">
                             <input type="text" id="connection_name" required/>
                             <%if (message.links.accept) {%>
-                                <button class="w3-btn w3-white w3-border" type="submit" onclick="request('<%=message.links.accept.href%>', '<%=message.links.accept.method%>', JSON.stringify({ name: document.getElementById('connection_name').value, messageId: document.getElementById('connection_message_id').value}))">Accept Connection Request</button>
+                                <button class="w3-btn w3-white w3-border" type="submit" onclick="request('<%=message.links.accept.href%>', '<%=message.links.accept.method%>', JSON.stringify({ name: document.getElementById('connection_name').value, messageId: document.getElementById('connection_message_id').value}))">Aceptar petición de Conexión</button>
                             <%}%>
                             <%if (message.links.reject) {%>
-                                <button class="w3-btn w3-white w3-border" type="submit" onclick="request('<%=message.links.reject.href%>', '<%=message.links.reject.method%>')">Reject Connection Request</button>
+                                <button class="w3-btn w3-white w3-border" type="submit" onclick="request('<%=message.links.reject.href%>', '<%=message.links.reject.method%>')">REchazar petición de Conexión</button>
                             <%}%>
                             <br><br>
                         </form>
@@ -38,7 +38,7 @@
                                 <button class="w3-btn w3-whitept.href% w3-border" type="submit" onclick="request('<%=link.href%>', '<%=link.method%>', '<%=link.message%>')"><%=link.name%></button>
                             <%}%>
                         <%} else {%>
-                            <p>Message:</p>
+                            <p>Mensaje:</p>
                             <p><%=message.message.message%></p>
                         <%}%>
                         <br><br>
