--- a/ui/views/index.ejs
+++ b/ui/views/index.ejs
@@ -41,7 +41,9 @@
         }
 
         .navbar { background-color: <%=theme%> !important;}
-        body {font-size: 18px}
+        body {
+            font-size: 18px;
+            background-image: url("<%=icon_src%>")}
     </style>
 </head>
 <body>
