--- a/ui/views/index.ejs
+++ b/ui/views/index.ejs
@@ -41,9 +41,7 @@
         }
 
         .navbar { background-color: <%=theme%> !important;}
-        body {
-            font-size: 18px;
-            background-image: url("<%=icon_src%>")}
+        body {font-size: 18px;}
     </style>
 </head>
 <body>
