--- a/ui/views/conexiones.ejs
+++ b/ui/views/conexiones.ejs
@@ -13,7 +13,9 @@
             </div>
             <%for(let relationship of relationships) {%>
                 <div class="carousel-item">
-                    <img class="d-block w-25 mx-auto" src="<%=relationship.metadata.icon%>">
+                    <%if(relationship.metadata.icon) {%>
+                        <img class="d-block w-25 mx-auto" src="<%=relationship.metadata.icon%>">
+                    <%}%>
                     <%if(relationship.metadata.name) {%>
                         <h3><%=relationship.metadata.name%></h3>
                     <%}%>
