--- a/ui/views/justificante.ejs
+++ b/ui/views/justificante.ejs
@@ -1,20 +1,21 @@
+
 <div id="justificante" class="tab" style="display:none;">
     <form method="POST" action="/api/proofs/send_request">
         <div class="w3-half">
             <div class="w3-container w3-card w3-padding w3-margin">
-                <label>Relationship: </label>
+                <label>Alumno: </label>
                 <select class="w3-select" name="their_relationship_did" required>
                     <%for(let relationship of relationships) {%>
                     <option value="<%=relationship.their_did%>"><%=relationship.metadata.name%></option>
                     <%}%>
                 </select>
                 <br><br>
-                <label>Select a Proof Request:</label>
+                <label>Selecciona justificante:</label>
                 <select id="currentProofRequest" onchange="show(this.value, 'proofRequestsClass')" class="w3-select" name="proof_request_id" required>
                     <%for(let pr of Object.keys(proofRequests)) {%>
                     <option value="<%=pr%>"><%=pr%></option>
                     <%}%>
-                    <option value="proofRequestOther">Other (Paste Proof Request Here) --></option>
+                    <option value="proofRequestOther">Otro(Pegue aqui otro justificante)--></option>
                 </select>
                 <br><br>
                 <input class="w3-btn w3-white w3-border" type="submit">
