--- a/ui/views/crearEsquema.ejs
+++ b/ui/views/crearEsquema.ejs
@@ -11,6 +11,7 @@
             <label>Sustituye el JSON por los atributos</label><br><br>
             <textarea style="height:220px;" class="w3-input" name="attributes" required>[
                 "nombre",
+                "icon",
                 "grado",
                 "estado",
                 "año",
