--- a/ui/views/mensajes.ejs
+++ b/ui/views/mensajes.ejs
@@ -1,5 +1,5 @@
 <div id="mensajes" class="tab" style="display:none;">
-    <button class="w3-right w3-btn w3-white w3-border" style="margin:15px 20px;" onclick="document.getElementById('newMessageModel').style.display='block'">Send a Message</button>
+    <button class="w3-right w3-btn w3-white w3-border" style="margin:15px 20px;" onclick="document.getElementById('newMessageModel').style.display='block'">Enviar Mensaje</button>
     <div id="messages" class="" style="display:block;margin:auto;width:50%; height:700px; overflow:scroll;">
         <%for(var message of messages) {%>
         <div class="center w3-padding">
