--- a/ui/views/mensajes.ejs
+++ b/ui/views/mensajes.ejs
@@ -1,51 +1,51 @@
 <div id="mensajes" class="tab" style="display:none;">
     <button class="w3-right w3-btn w3-white w3-border" style="margin:15px 20px;" onclick="document.getElementById('newMessageModel').style.display='block'">Enviar Mensaje</button>
-    <div id="messages" class="" style="display:block;margin:auto;width:50%; height:700px; overflow:scroll;">
+    <ul class="list-group" id="messages">
         <%for(var message of messages) {%>
-        <div class="center w3-padding">
+        <li class="list-group-item">
             <div class="w3-card w3-container" >
                 <button class="w3-btn w3-white w3-right" onclick="request('/api/messages/delete', 'POST', JSON.stringify({messageId: '<%=message.id%>'}))"><i class="fa fa-close"></i></button>
                 <%if(message.relationshipName) {%>
-                    <p><b>De: <%=message.relationshipName%></b></p>
+                <p><b>De: <%=message.relationshipName%></b></p>
                 <%}%>
                 <p>Tipo: <%=message.message.type%></p>
                 <p>Recibido: <%=message.timestamp%></p>
                 <div>
                     <%if (message.message.type === messageTypes.connections.REQUEST) {%>
-                        <form>
-                            <input type="hidden" id="connection_message_id" value="<%=message.id%>">
-                            <input type="text" id="connection_name" required/>
-                            <%if (message.links.accept) {%>
-                                <button class="w3-btn w3-white w3-border" type="submit" onclick="request('<%=message.links.accept.href%>', '<%=message.links.accept.method%>', JSON.stringify({ name: document.getElementById('connection_name').value, messageId: document.getElementById('connection_message_id').value}))">Aceptar petición de Conexión</button>
-                            <%}%>
-                            <%if (message.links.reject) {%>
-                                <button class="w3-btn w3-white w3-border" type="submit" onclick="request('<%=message.links.reject.href%>', '<%=message.links.reject.method%>')">Rechazar petición de Conexión</button>
-                            <%}%>
-                            <br><br>
-                        </form>
+                    <form>
+                        <input type="hidden" id="connection_message_id" value="<%=message.id%>">
+                        <input type="text" id="connection_name" required/>
+                        <%if (message.links.accept) {%>
+                        <button class="w3-btn w3-white w3-border" type="submit" onclick="request('<%=message.links.accept.href%>', '<%=message.links.accept.method%>', JSON.stringify({ name: document.getElementById('connection_name').value, messageId: document.getElementById('connection_message_id').value}))">Aceptar petición de Conexión</button>
+                        <%}%>
+                        <%if (message.links.reject) {%>
+                        <button class="w3-btn w3-white w3-border" type="submit" onclick="request('<%=message.links.reject.href%>', '<%=message.links.reject.method%>')">Rechazar petición de Conexión</button>
+                        <%}%>
+                        <br><br>
+                    </form>
                     <%} else if(message.message.type === messageTypes.proofs.REQUEST) {%>
                     <p><b>Atributos Requeridos</b></p>
-                            <%for(let attr of Object.keys(message.message.message.proofRequest.requested_attributes)) {%>
-                                <p><%=message.message.message.proofRequest.requested_attributes[attr].name%></p>
-                            <%}%>
-                        <%for(let link of message.links) {%>
-                            <button class="w3-btn w3-white w3-border" type="submit" onclick="request('<%=link.href%>', '<%=link.method%>', '<%=link.message%>')"><%=link.name%></button>
-                        <%}%>
-                        <br><br>
+                    <%for(let attr of Object.keys(message.message.message.proofRequest.requested_attributes)) {%>
+                    <p><%=message.message.message.proofRequest.requested_attributes[attr].name%></p>
+                    <%}%>
+                    <%for(let link of message.links) {%>
+                    <button class="w3-btn w3-white w3-border" type="submit" onclick="request('<%=link.href%>', '<%=link.method%>', '<%=link.message%>')"><%=link.name%></button>
+                    <%}%>
+                    <br><br>
                     <%} else {%>
-                        <%if(message.links) {%>
-                            <%for(let link of message.links) {%>
-                                <button class="w3-btn w3-whitept.href% w3-border" type="submit" onclick="request('<%=link.href%>', '<%=link.method%>', '<%=link.message%>')"><%=link.name%></button>
-                            <%}%>
-                        <%} else {%>
-                            <p>Mensaje:</p>
-                            <p><%=message.message.message%></p>
-                        <%}%>
-                        <br><br>
+                    <%if(message.links) {%>
+                    <%for(let link of message.links) {%>
+                    <button class="w3-btn w3-whitept.href% w3-border" type="submit" onclick="request('<%=link.href%>', '<%=link.method%>', '<%=link.message%>')"><%=link.name%></button>
+                    <%}%>
+                    <%} else {%>
+                    <p>Mensaje:</p>
+                    <p><%=message.message.message%></p>
+                    <%}%>
+                    <br><br>
                     <%}%>
                 </div>
             </div>
-        </div>
+        </li>
         <%}%>
-    </div>
+    </ul>
 </div>
