--- a/ui/views/conexiones.ejs
+++ b/ui/views/conexiones.ejs
@@ -18,8 +18,8 @@
                     <%}else{%>
                         <img src="https://image.flaticon.com/icons/png/512/46/46285.png">
                     <%}%>
-                    <%if(relationship.metadata.name) {%>
-                        <h3><%=relationship.metadata.name%></h3>
+                    <%if(relationship.metadata.nombre) {%>
+                        <h3><%=relationship.metadata.nombre%></h3>
                     <%}%>
                     <fieldset>
                         <legend class="" style="border:none;margin:10px;">Relationship DIDs</legend>
